--- a/Gamecloud.Web/Web.config
+++ b/Gamecloud.Web/Web.config
@@ -9,8 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Gamecloud.Web-20170926100207.mdf;Initial Catalog=aspnet-Gamecloud.Web-20170926100207;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Gamecloud.Web-20170926100207.mdf;Initial Catalog=aspnet-Gamecloud.Web-20170926100207;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Server=mssql6.gear.host;Database=gameclouddev; User Id=gameclouddev; Password=Mk3rSkm3~?sj;Trusted_Connection=True; Integrated Security=False"
+  providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
