--- a/Gamecloud.Web/Web.config
+++ b/Gamecloud.Web/Web.config
@@ -9,10 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Gamecloud.Web-20170926100207.mdf;Initial Catalog=aspnet-Gamecloud.Web-20170926100207;Integrated Security=True"
-      providerName="System.Data.SqlClient" />-->
     <add name="DefaultConnection" connectionString="Data Source=mssql6.gear.host;Initial Catalog=gameclouddev; User Id=gameclouddev; Password=Mk3rSkm3~?sj;Trusted_Connection=True; Integrated Security=False"
-  providerName="System.Data.SqlClient" />
+      providerName="System.Data.SqlClient" />
+    <add name="GamecloudWebContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=GamecloudWebContext-20171015173859; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|GamecloudWebContext-20171015173859.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -98,4 +98,16 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IStreamService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/WCFServices/Service1/"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IStreamService"
+        contract="StreamService.IStreamService" name="BasicHttpBinding_IStreamService" />
+    </client>
+  </system.serviceModel>
 </configuration>
