--- a/Gamecloud.Web/Gamecloud.Web.csproj
+++ b/Gamecloud.Web/Gamecloud.Web.csproj
@@ -244,6 +244,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ClipsController.cs" />
     <Compile Include="Controllers\DashboardApiController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -252,6 +253,7 @@
     <Compile Include="Controllers\StreamApiController.cs" />
     <Compile Include="Controllers\StreambotApiController.cs" />
     <Compile Include="Controllers\StreambotController.cs" />
+    <Compile Include="Controllers\StreamsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -287,6 +289,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\app\clips.js" />
+    <Content Include="Scripts\app\clips.viewmodel.js" />
     <Content Include="Scripts\app\dashboard.viewmodel.js" />
     <Content Include="Scripts\app\stream.viewmodel.js" />
     <Content Include="Scripts\app\streambot.viewmodel.js" />
@@ -384,6 +387,10 @@
     <Content Include="Views\Dashboard\_Dashboard.cshtml" />
     <Content Include="Views\Streambot\Index.cshtml" />
     <Content Include="Views\Streambot\_Streambot.cshtml" />
+    <Content Include="Views\Streams\Index.cshtml" />
+    <Content Include="Views\Streams\_Stream.cshtml" />
+    <Content Include="Views\Clips\Index.cshtml" />
+    <Content Include="Views\Clips\_Clips.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
